# Template

./: CMakeLists.txt  README.md
lib/: libglut.so.3.12.0
src/: 1_point.cpp  2_garis.cpp  3_segitiga.cpp  4_persegi.cpp  main.cpp
